start working an filter block

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,823 +65,24 @@ body {
   overflow: hidden;
 }
 
-.menuTop {
-  max-width: 100%;
-  @include row-flex();
-  margin: 0;
-  position: relative;
-
-  @include lg-block() {
-    padding: 0 20px;
-  }
-
-  padding: 0 116px * 100% / 1400px;
-  min-height: 90px;
-  align-items: center;
-  border: 1px solid $colBor;
-  box-sizing: border-box;
-
-  &__Icon {
-    display: flex;
-    min-width: 62px;
-    min-height: inherit;
-    align-items: center;
-    justify-content: start;
-    border-right: 1px solid $colBor;
-  }
-
-  &__IconSvg {
-    @include hovAct();
-  }
-
-  &__logo {
-    margin-left: 2.51429%;
-  }
-
-  &__logoSvg {
-    @include hovAct();
-  }
-
-  &__iconMemu {
-    display: none;
-    width: 30px;
-    height: 30px;
-    border: 1px solid $colText;
-    border-radius: 4px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: transform 200ms;
-    z-index: 300;
-
-  }
-
-  &__line {
-    margin: 3px 0;
-    display: flex;
-    width: 80%;
-    height: 0;
-    border-top: 2px solid $colText;
-    transition: transform 200ms, opacity 200ms;
-    z-index: -25;
-  }
-
-  &__nav {
-    display: flex;
-    margin-left: 13.42857%;
-    min-width: 437px;
-    justify-content: space-between;
-    margin: 0 auto;
-  }
-
-
-  &__a {
-    text-decoration: none;
-    font-size: 14px;
-    font-family: $mpr;
-    color: #343e5c;
-    @include hovAct();
-  }
-
-  &__contCart {
-    display: flex;
-    margin-left: auto;
-    //  min-width: 88px;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 0;
-    margin-right: 29px;
-  }
-
-  &__CartSvg {
-    @include hovAct();
-  }
-
-  &__spanCart {
-    text-transform: uppercase;
-    font-size: 11px;
-    font-family: $mr;
-    margin: 0 10px;
-  }
-
-  &__countCart {
-    display: flex;
-    min-width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: #e3e8f0;
-    font-size: 11px;
-    align-items: center;
-    justify-content: center;
-  }
-
-  &__button {
-    display: flex;
-    min-width: 84px;
-    min-height: 30px;
-    border-radius: 15px;
-    border: 2px solid #2754eb;
-    font-size: 11px;
-    font-family: $mr;
-    align-items: center;
-    justify-content: center;
-    text-transform: uppercase;
-    background-color: #2754eb;
-    outline: none;
-    color: #fff;
-    // margin-left: auto;
-
-    &:hover {
-      background-color: #7490ec;
-      border: 2px solid #7490ec;
-    }
-
-    &:active {
-      background-color: #030c29;
-      border: 2px solid #030c29;
-    }
-  }
-
-  /************************adept mtnu*********************/
-  /************************adept mtnu*********************/
-  /************************adept mtnu*********************/
-  @include to(850px) {
-    &__nav {
-      transition: transform 300ms;
-      transform-origin: 0 0;
-      transform: scaleY(0);
-      //padding: 88px 0 0;
-      position: absolute;
-      flex-direction: column;
-      background-color: transparent;
-      min-width: 150px;
-      z-index: 250;
-      bottom: -131px;
-      right: -1px;
-    }
-
-    &__nav-activ {
-      transform: scaleY(1);
-    }
-
-    &__a {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 25px;
-      border: 1px solid rgba(128, 128, 128, 0.548);
-      border-bottom: none;
-      text-decoration: none;
-      font-size: 14px;
-      font-family: $mpr;
-      color: #343e5c;
-      background-color: #fff;
-
-
-      &:hover {
-        color: #343e5c;
-      }
-
-      &:active {
-        color: #343e5c;
-      }
-    }
-
-    &__a:last-child {
-      border: 1px solid rgba(128, 128, 128, 0.548);
-    }
-
-    &__iconMemu {
-      order: 2;
-      display: flex;
-      margin-left: 5px;
-      transition: transform 300ms, border-radius 300ms;
-    }
-
-    &__iconMemu-activ {
-      display: flex;
-      border-radius: 50%;
-      //   transform: rotate(360deg);
-    }
-
-    &__line-activ:first-child {
-      transform: rotate(45deg);
-      margin: -5px auto;
-    }
-
-    &__line-activ:nth-child(2) {
-      opacity: 0;
-    }
-
-    &__line-activ:last-child {
-      transform: rotate(-45deg);
-      margin: -5px auto;
-    }
-
-    &__contCart {
-      margin-right: 5px;
-      margin-left: auto;
-      order: 1 // display: none;
-
-    }
-
-    &__spanCart {
-      display: none;
-    }
-
-    &__countCart {
-      margin-left: 5px;
-    }
-
-    &__button {
-      display: none;
-    }
-  }
-}
-
-.menuBottom {
-  max-width: 100%;
-  @include row-flex();
-  margin: 0;
-
-  @include lg-block() {
-    padding: 0 20px;
-  }
-
-  padding: 0 116px * 100% / 1400px;
-  min-height: 56px;
-  align-items: center;
-  border-left: 1px solid $colBor;
-  border-right: 1px solid $colBor;
-  box-sizing: border-box;
-
-  &__contFirts {
-    display: flex;
-    min-width: 486px;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  &__a,
-  &__suppots {
-    text-decoration: none;
-    text-transform: uppercase;
-    @include hovAct();
-    font-size: 1em;
-    font-family: $mr;
-  }
-
-  &__form {
-    display: flex;
-    align-items: center;
-  }
-
-  &__search {
-    display: flex;
-    margin-left: auto;
-    min-width: 300px;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  &__searchSvg {
-    margin-top: 1px;
-    @include hovAct();
-  }
-
-  &__button {
-    border: none;
-    outline: none;
-    background-color: white;
-  }
-
-  &__input {
-    border: none;
-    font-size: 14px;
-    padding: 5px;
-    outline: none;
-    width: 130px;
-
-    @include placeholder {
-      font-size: 14px;
-      font-family: $mr;
-    }
-  }
-
-  @include to(850px) {
-    &__search {
-      order: 1;
-      flex-direction: column;
-      margin: 0 auto;
-    }
-    &__form {
-      order:1;
-      min-height: 30px;
-      border: 1px solid $colBor;
-      margin-top: 2px;
-    }
-    &__suppots {
-      order:2;
-      min-height: 30px;
-      border: 1px solid $colBor;
-      margin-top: 2px;
-    }
-
-    &__contFirts {
-      min-width: 100%;
-      box-sizing: border-box;
-      order: 2;
-      flex-direction: column;
-      margin: 0 auto;
-    }
-  }
-}
-
-.slider {
-  display: flex;
-  min-height: 500px;
-  position: relative;
-}
-
-.next {
-  position: absolute;
-  right: 10%;
-  top: 48%;
-  width: 42px;
-  height: 42px;
-  border: 2px solid rgb(102, 100, 100);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 300;
-
-  &:hover .nextSvg {
-    fill: orangered;
-  }
-
-  &:active .nextSvg {
-    fill: yellow;
-  }
-}
-
-.nextSvg {
-  fill: #fff;
-  z-index: 250;
-}
-
-.pagination {
-  display: flex;
-  position: absolute;
-  bottom: 30px;
-  left: 45%;
-}
-
-.check {
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  border: 2px solid $colBor;
-  z-index: 250;
-  margin: 0 10px;
-
-  &:hover {
-    border: 2px solid $colHov;
-  }
-
-  &:active {
-    border: 2px solid $colAct;
-  }
-}
-
-.checkActiv {
-  background-color: $colBor;
-}
-
-div[data-id="1"] {
-  background-color: #1c1e23;
-}
-
-div[data-id="2"] {
-  background-color: #1c1e23;
-}
-
-div[data-id="3"] {
-  background-color: #1c1e23;
-}
-
-div[data-id="4"] {
-  background-color: #1c1e23;
-}
-
-.bunner {
-  width: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  display: flex;
-  min-height: 500px;
-  /*   background: url("/img/Placeholder.png") no-repeat center;
-  background-size: cover; */
-  transform: translateX(100%);
-  transition: opacity 600ms linear, transform 10ms linear 600ms;
-
-  &__contContent {
-    margin-top: 97px * 100%/1400px;
-    margin-left: 216px * 100%/1400px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  &__h2 {
-    margin: 0;
-    max-width: 340px;
-    display: flex;
-    justify-content: flex-start;
-    font-family: $mblack;
-    color: #fff;
-    font-size: 42px;
-  }
-
-  &__p {
-    margin: 32px 0 0 0;
-    max-width: 415px;
-    display: flex;
-    justify-content: flex-start;
-    font-family: $ctr;
-    color: #fff;
-    font-size: 16px;
-    line-height: 24px;
-  }
-
-  &__button {
-    margin: 63px 0 0 0;
-    display: flex;
-    min-width: 84px;
-    min-height: 30px;
-    border-radius: 15px;
-    border: 2px solid #2754eb;
-    font-size: 11px;
-    font-family: $mr;
-    align-items: center;
-    justify-content: center;
-    text-transform: uppercase;
-    background-color: #2754eb;
-    outline: none;
-    color: #fff;
-
-    &:hover {
-      background-color: #7490ec;
-      border: 2px solid #7490ec;
-    }
-
-    &:active {
-      background-color: #030c29;
-      border: 2px solid #030c29;
-    }
-  }
-
-  &__imgProduct {
-    margin: 10px 20% 10px auto;
-  }
-}
-
-.bunnerActiv {
-  opacity: 1;
-  z-index: 200;
-  transform: translateX(0);
-  transition: transform 600ms linear;
-}
+@import "menuTop";
+@import "menuBot";
+@import "slider";
 
 .main {
   background-color: #e4e5e7;
 }
 
 .bodyShop {
-  // @include row-flex();
-  // margin: 0;
   display: flex;
   flex-wrap: wrap;
   padding: 50px 116px;
-}
-
-.search {
-  width: 100%;
-  @include row-flex();
-  margin: 0;
-  align-items: center;
-  min-height: 57px;
-  border-radius: 5px;
-  background-color: #fff;
-
-  &__sortBy {
-    height: 100%;
-    display: flex;
-    @include col();
-    margin: 0;
-    @include size(2.8);
-    flex-wrap: wrap;
-    align-items: center;
-    border-right: 1px solid #e4e5e7;
-    padding: 0 21px;
-  }
-
-  &__titelSort {
-    font-family: $mr;
-    font-size: 11px;
-    color: #a1a8bd;
-    text-transform: uppercase;
-  }
-
-  &__typeSort {
-    height: 100%;
-    // background-color: orange;
-    min-width: 120px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    position: relative;
-    margin-left: auto;
-  }
-
-  &__valueSort {
-    font-family: $mr;
-    font-size: 11px;
-    color: #343e5c;
-    text-transform: uppercase;
-  }
-
-  &__icon {
-    width: 11px;
-    height: 11px;
-    background: url("/img/imgmenu.png") no-repeat center;
-    margin-left: 5px;
-  }
-
-  &__paramasSort {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    bottom: -120px;
-    left: 0;
-    background-color: rgb(255, 255, 255);
-    transform: scaleY(0);
-    transform-origin: 0 0;
-    transition: 300ms linear;
-    background-color: #a8e3ee;
-    border-radius: 7px;
-    opacity: 0;
-    z-index: 200;
-
-    &::before {
-      position: absolute;
-      content: "";
-      display: block;
-      border-bottom: 10px solid#a8e3ee;
-      border-right: 10px solid transparent;
-      border-left: 10px solid transparent;
-      top: -9px;
-      right: 25px;
-    }
-  }
-
-  &__typeSort:hover>&__paramasSort {
-    opacity: 1;
-    display: flex;
-    transform: scaleY(1);
-    // transform: sc;
-  }
-
-  &__li {
-    display: flex;
-    min-width: 120px;
-    margin: 10px 0 10px 0;
-    padding-left: 20px;
-    list-style: none;
-    font-family: $mr;
-    font-size: 12px;
-    color: #343e5c;
-    @include hovAct();
-  }
-
-  &__KAP {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 100%;
-    @include col();
-    margin: 0;
-    @include size(7.5);
-    flex-wrap: wrap;
-    padding: 11px 21px;
-    border-right: 1px solid #e4e5e7;
-    border-left: 1px solid #e4e5e7;
-    box-sizing: border-box;
-  }
-
-  &__keywords {
-    font-family: $mr;
-    font-size: 11px;
-    color: #343e5c;
-    text-transform: uppercase;
-  }
-
-  &__inpK {
-    width: 160px;
-    height: 30px;
-    border-radius: 15px;
-    border: 1px solid #e3e8f0;
-    background-color: #f0f2f7;
-    margin-left: 11px;
-    padding: 0 12px;
-    box-sizing: border-box;
-    font-family: $mr;
-    font-size: 13px;
-    color: #b9bfd3;
-    outline: none;
-
-    @include placeholder() {
-      font-family: $mr;
-      font-size: 13px;
-      color: #b9bfd3;
-    }
-  }
-
-  &__titelprice {
-    font-family: $mr;
-    font-size: 11px;
-    color: #343e5c;
-    text-transform: uppercase;
-    margin-left: 30px;
-    margin-right: 13px;
-  }
-
-  &__price {
-    width: 62px;
-    height: 30px;
-    border-radius: 15px;
-    border: 1px solid #e3e8f0;
-    background-color: #f0f2f7;
-    padding: 0 12px;
-    box-sizing: border-box;
-    font-family: $mr;
-    font-size: 13px;
-    color: #b9bfd3;
-    outline: none;
-
-    @include placeholder() {
-      font-family: $mr;
-      font-size: 13px;
-      color: #343e5c;
-    }
-  }
-
-  &__def {
-    font-family: $mr;
-    font-size: 11px;
-    color: #343e5c;
-    text-transform: uppercase;
-    margin: 0 5px;
-  }
-
-  &__check {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: #00e2aa;
-    display: none;
-  }
-
-  &__check:checked+&__titelCheck {
-    &::before {
-      content: "\2714";
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: absolute;
-      top: -2px;
-      left: -24px;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      background-color: #00e2aa;
-      color: white;
-    }
-  }
-
-  &__titelCheck {
-    display: flex;
-    margin-left: 60px;
-    position: relative;
-    font-family: $mr;
-    font-size: 13px;
-    color: #343e5c;
-
-    &::before {
-      content: "";
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: absolute;
-      top: -2px;
-      left: -24px;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      background-color: #00e2aa;
-      color: white;
-    }
-  }
-
-  &__ship {
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    @include col();
-    margin: 0;
-    @include size(2.62);
-    align-items: center;
-    justify-content: space-between;
-    border-left: 1px solid #e4e5e7;
-    padding: 0 25px;
-  }
-
-  &__titelShip {
-    font-family: $mr;
-    font-size: 11px;
-    color: #a1a8bd;
-    text-transform: uppercase;
-  }
-
-  &__contShips {
-    height: 100%;
-    min-width: 120px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    position: relative;
-    margin-left: auto;
-  }
-
-  &__areaship {
-    font-family: $mr;
-    font-size: 11px;
-    color: #343e5c;
-    text-transform: uppercase;
-  }
-
-  &__listAreasShips {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    bottom: -120px;
-    left: 0;
-    // background-color: rgb(255, 255, 255);
-    z-index: 800;
-    transform: scaleY(0);
-    transform-origin: 0 0;
-    transition: 300ms linear;
-    background-color: #a8e3ee;
-    border-radius: 7px;
-    opacity: 0;
-
-    &::before {
-      position: absolute;
-      content: "";
-      display: block;
-      border-bottom: 10px solid #a8e3ee;
-      border-right: 10px solid transparent;
-      border-left: 10px solid transparent;
-      top: -9px;
-      right: 25px;
-    }
-  }
-
-  &__contShips:hover>&__listAreasShips {
-    opacity: 1;
-    display: flex;
-    transform: scaleY(1);
-    // transform: sc;
-  }
-
-  &__liships {
-    display: flex;
-    min-width: 120px;
-    margin: 10px 0 10px 0;
-    padding-left: 20px;
-    list-style: none;
-    font-family: $mr;
-    font-size: 12px;
-    color: #343e5c;
-    @include hovAct();
+  @include to(1350px) {
+    padding: 30px 25px;
   }
 }
+
+@import "filter1";
 
 .left {
   display: flex;
