--- a/src/scss/_menuBot.scss
+++ b/src/scss/_menuBot.scss
@@ -69,6 +69,7 @@
   }
 
   @include to(850px) {
+    padding: 5px 20px;
     &__search {
       min-width: 100%;
       order: 1;
@@ -82,8 +83,6 @@
       min-height: 30px;
       border: 1px solid $colBor;
       margin: 0;
-      margin-top: 2px;
-      box-sizing: border-box;
     }
     &__suppots,
     &__a {
