--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -287,7 +287,7 @@ body {
     display: none;
   }
 
-  &__check:checked+&__titelCheck {
+  &__check:checked + &__titelCheck {
     &::before {
       content: "\2714";
       display: flex;
@@ -557,7 +557,7 @@ body {
     display: none;
   }
 
-  &__inputInstorage:checked~&__inStorage>&__contIcon {
+  &__inputInstorage:checked ~ &__inStorage > &__contIcon {
     &::before {
       content: "";
       display: block;
@@ -569,7 +569,7 @@ body {
     }
   }
 
-  &__inputCheck:checked~&__nameCheck>&__contIconB {
+  &__inputCheck:checked ~ &__nameCheck > &__contIconB {
     background-image: url("/img/Check\ Icon.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -702,7 +702,7 @@ body {
     display: none;
   }
 
-  &__inputCheck:checked~&__nameCheck>&__contIconB {
+  &__inputCheck:checked ~ &__nameCheck > &__contIconB {
     background-image: url("/img/Check\ Icon.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -777,7 +777,7 @@ body {
     margin-right: 15px;
   }
 
-  &__input:checked~&__label>&__contIcon {
+  &__input:checked ~ &__label > &__contIcon {
     &::before {
       content: "";
       display: block;
@@ -794,7 +794,7 @@ body {
   width: calc(100% - 300px);
   display: flex;
   margin: 25px 0 0 30px;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
@@ -866,13 +866,13 @@ body {
 @include to(1260px) {
   .contItem {
     width: 44%;
-    margin: 1%;
+    // margin: 1%;
   }
 }
 
 @include to(900px) {
   .contItem {
-    width: 85%;
+    width: 100%;
   }
 }
 
@@ -914,8 +914,8 @@ body {
   min-height: 90px;
 }
 
-.page-item:first-child>button,
-.page-item:last-child>button {
+.page-item:first-child > button,
+.page-item:last-child > button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -934,7 +934,7 @@ body {
     background-color: rgb(190, 190, 216);
   }
 
-  &:active>button>img {
+  &:active > button > img {
     transform: scale(1.2);
   }
 }
@@ -947,7 +947,7 @@ body {
     background-color: rgb(190, 190, 216);
   }
 
-  &:active>button>img {
+  &:active > button > img {
     transform: scale(1.2);
   }
 }
@@ -960,7 +960,7 @@ body {
   min-height: 90px;
 }
 
-.page-item:not(:first-child):not(:last-child)>button {
+.page-item:not(:first-child):not(:last-child) > button {
   display: flex;
   border: none;
   outline: none;
@@ -1000,31 +1000,24 @@ body {
   margin-right: auto;
 }
 
-
 @include to(700px) {
-
   li.page-item:nth-child(5),
   li.page-item:nth-child(6),
   li.page-item:nth-child(7),
   li.page-item:nth-child(8),
   li.page-item:nth-child(9) {
-    display: none!important;
+    display: none !important;
   }
 
   li.page-item:nth-child(4) {
     margin-right: auto;
   }
-
-
-
 }
-
 
 .bestSellers {
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #fff;
   border-radius: 5px;
   margin-top: 50px;
 
@@ -1040,12 +1033,14 @@ body {
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 1.1px;
+    background-color: #fff;
   }
 
   &__contItems {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    // background-color: #fff;
   }
 
   &__contItem {
@@ -1057,6 +1052,41 @@ body {
     padding: 28px 10px 35px 10px;
     box-sizing: border-box;
     justify-content: space-between;
+    background-color: #fff;
+  }
+
+  @include to(960px) {
+    &__contItems {
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+      justify-content: space-between;
+    }
+    &__titel {
+      border-radius: 5px;
+      margin-bottom: 2px;
+    }
+    &__contItem {
+      border-radius: 5px;
+      width: 49.6%;
+      margin: 0;
+      margin-bottom: 10px;
+      border: none;
+      margin: 2px 0;
+    }
+  }
+  @include to(600px) {
+    &__titel {
+      border-radius: 5px;
+    }
+    &__contItem {
+      border-radius: 5px;
+      width: 100%;
+      margin: 0;
+      margin-bottom: 10px;
+      border: none;
+      margin: 5px 0;
+    }
   }
 
   &__contItem:not(:first-child) {
@@ -1132,6 +1162,7 @@ body {
     font-size: 32px;
     font-weight: 400;
     justify-content: center;
+    text-align: center;
   }
 
   &__p {
@@ -1143,6 +1174,7 @@ body {
     font-size: 16px;
     font-style: italic;
     margin-top: 15px;
+    text-align: center;
   }
 
   &__contReviews {
@@ -1198,6 +1230,42 @@ body {
     font-weight: 400;
     line-height: 24px;
   }
+
+  @include to(1100px) {
+    &__contReviews {
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 20px;
+    }
+    &__h2 {
+      font-size: 22px;
+    }
+    &__contReview {
+      width: 80%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 20px;
+    }
+    &__contImgAndName {
+      width: 100%;
+      justify-content: center;
+    }
+    &__name {
+      width: 100px;
+    }
+    &__text {
+      width: 100%;
+      margin-top: 10px;
+      color: #3a405b;
+      font-family: "Crimson Text - Roman";
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+      text-align: center;
+    }
+  }
 }
 
 .footer {
@@ -1209,6 +1277,12 @@ body {
   flex-direction: column;
 }
 
+@include to(850px) {
+  .footer {
+    padding: 0 20px;
+  }
+}
+
 .nav {
   width: 100%;
   display: flex;
@@ -1216,6 +1290,7 @@ body {
   padding: 62px 0;
   align-items: center;
   border-bottom: 1px solid rgba(255, 255, 255, 0.507);
+  flex-wrap: wrap;
 
   &__img {
     transition: transform 100ms;
@@ -1230,7 +1305,7 @@ body {
   }
 
   &__ul {
-    width: 387px * 100% / $widthBoby;
+    width: 387px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1255,7 +1330,7 @@ body {
   }
 
   &__socsety {
-    width: 120px * 100% / $widthBoby;
+    width: 120px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1271,6 +1346,12 @@ body {
 
     &:active {
       color: red;
+    }
+  }
+
+  @include to(850px) {
+    &__ul {
+      display: none;
     }
   }
 }
@@ -1318,5 +1399,20 @@ body {
     &:active {
       color: red;
     }
+  }
+
+  @include to(850px) {
+    flex-direction: column;
+    &__p {
+      width: 80%;
+      text-align: center;
+    }
+    &__ul {
+      width: 80%;
+      text-align: center;
+      margin-top: 20px;
+
+    }
+
   }
 }
