--- a/src/scss/_menuTop.scss
+++ b/src/scss/_menuTop.scss
@@ -104,9 +104,12 @@
       justify-content: center;
       align-items: center;
       font-weight: 700;
+      border: 1px solid rgb(197, 197, 197);
+      border-radius: 50%;
     }
     &:hover::before {
       color: $colBlue;
+      background-color: rgb(233, 233, 233);
     }
 
     &:hover {
@@ -169,6 +172,9 @@
   /************************adept mtnu*********************/
   /************************adept mtnu*********************/
   @include to(850px) {
+    &__logo {
+      order: 2;
+    }
     &__nav {
       transition: transform 300ms;
       transform-origin: 0 0;
@@ -180,7 +186,7 @@
       min-width: 150px;
       z-index: 250;
       bottom: -131px;
-      right: -1px;
+      left: -1px;
     }
 
     &__nav-activ {
@@ -214,7 +220,7 @@
     }
 
     &__iconMemu {
-      order: 2;
+      order: 1;
       display: flex;
       margin-left: 5px;
       transition: transform 300ms, border-radius 300ms;
@@ -243,7 +249,7 @@
     &__contCart {
       margin-right: 5px;
       margin-left: auto;
-      order: 1; // display: none;
+      order: 3; // display: none;
     }
 
     &__spanCart {
@@ -251,7 +257,7 @@
     }
 
     &__countCart {
-      margin-left: 5px;
+      margin-left: 20px;
     }
 
     &__button {
@@ -259,8 +265,6 @@
     }
   }
 }
-
-
 
 .contCartProducts {
   display: flex;
@@ -395,7 +399,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    right: -63px;
+    right: -25px;
     top: 50px;
     z-index: 300;
     width: 280px;
@@ -408,10 +412,13 @@
       display: block;
       position: absolute;
       top: -14px;
-      right: 87px;
+      right: 62px;
       border-right: 15px solid transparent;
       border-left: 15px solid transparent;
       border-bottom: 15px solid rgb(180, 176, 176);
+    }
+    &__allClean {
+      margin: 0 13px;
     }
   }
 }
